Crash erasing GPencil when occlusion test is enabled #92760

Closed
opened 2021-11-02 17:35:22 +01:00 by Germano Cavalcante · 9 comments

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: Radeon (TM) RX 480 Graphics ATI Technologies Inc. 4.5.14760 Core Profile Context 20.45.37.01 27.20.14537.1001

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-10-31 17:52, hash: c312c71969
Worked: Apparently Never

Short description of error
Apparently the crash occurs when enabling the erase tool, checking the occlusion, saving the file and opening it again.
I didn't find the exact steps to reproduce the problem from scratch, but I noticed this problem a few times.

Exact steps for others to reproduce the error

**System Information** Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: Radeon (TM) RX 480 Graphics ATI Technologies Inc. 4.5.14760 Core Profile Context 20.45.37.01 27.20.14537.1001 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2021-10-31 17:52, hash: `c312c71969` Worked: Apparently Never **Short description of error** Apparently the crash occurs when enabling the erase tool, checking the occlusion, saving the file and opening it again. I didn't find the exact steps to reproduce the problem from scratch, but I noticed this problem a few times. **Exact steps for others to reproduce the error** - Open attached file - Try to erase the stroke [gp_erease_bug.blend](https://archive.blender.org/developer/F11679670/gp_erease_bug.blend)
Poster
Collaborator

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Poster
Collaborator

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'
Poster
Collaborator

I'm not sure there's enough information to confirm the bug as I can't find the steps to replicate it from scratch.
But it deserves some attention.

I'm not sure there's enough information to confirm the bug as I can't find the steps to replicate it from scratch. But it deserves some attention.
Poster
Collaborator

This seems to solve:

diff --git a/source/blender/editors/gpencil/gpencil_paint.c b/source/blender/editors/gpencil/gpencil_paint.c
index 070470b3734..51e08bdb69a 100644
--- a/source/blender/editors/gpencil/gpencil_paint.c
+++ b/source/blender/editors/gpencil/gpencil_paint.c
@@ -1581,11 +1581,12 @@ static void gpencil_stroke_eraser_dostroke(tGPsdata *p,
          * - this assumes that line-width is irrelevant.
          */
         if (gpencil_stroke_inside_circle(mval, radius, pc0[0], pc0[1], pc2[0], pc2[1])) {
-
-          bool is_occluded_pt0, is_occluded_pt1, is_occluded_pt2 = true;
-          is_occluded_pt0 = (pt0 && ((pt0->flag & GP_SPOINT_TEMP_TAG) != 0)) ?
-                                ((pt0->flag & GP_SPOINT_TEMP_TAG2) != 0) :
-                                gpencil_stroke_eraser_is_occluded(p, gpl, pt0, pc0[0], pc0[1]);
+          bool is_occluded_pt0 = true, is_occluded_pt1 = true, is_occluded_pt2 = true;
+          if (pt0) {
+            is_occluded_pt0 = (pt0->flag & GP_SPOINT_TEMP_TAG) ?
+                                  ((pt0->flag & GP_SPOINT_TEMP_TAG2) != 0) :
+                                  gpencil_stroke_eraser_is_occluded(p, gpl, pt0, pc0[0], pc0[1]);
+          }
           if (is_occluded_pt0) {
             is_occluded_pt1 = ((pt1->flag & GP_SPOINT_TEMP_TAG) != 0) ?
                                   ((pt1->flag & GP_SPOINT_TEMP_TAG2) != 0) :

This seems to solve: ``` diff --git a/source/blender/editors/gpencil/gpencil_paint.c b/source/blender/editors/gpencil/gpencil_paint.c index 070470b3734..51e08bdb69a 100644 --- a/source/blender/editors/gpencil/gpencil_paint.c +++ b/source/blender/editors/gpencil/gpencil_paint.c @@ -1581,11 +1581,12 @@ static void gpencil_stroke_eraser_dostroke(tGPsdata *p, * - this assumes that line-width is irrelevant. */ if (gpencil_stroke_inside_circle(mval, radius, pc0[0], pc0[1], pc2[0], pc2[1])) { - - bool is_occluded_pt0, is_occluded_pt1, is_occluded_pt2 = true; - is_occluded_pt0 = (pt0 && ((pt0->flag & GP_SPOINT_TEMP_TAG) != 0)) ? - ((pt0->flag & GP_SPOINT_TEMP_TAG2) != 0) : - gpencil_stroke_eraser_is_occluded(p, gpl, pt0, pc0[0], pc0[1]); + bool is_occluded_pt0 = true, is_occluded_pt1 = true, is_occluded_pt2 = true; + if (pt0) { + is_occluded_pt0 = (pt0->flag & GP_SPOINT_TEMP_TAG) ? + ((pt0->flag & GP_SPOINT_TEMP_TAG2) != 0) : + gpencil_stroke_eraser_is_occluded(p, gpl, pt0, pc0[0], pc0[1]); + } if (is_occluded_pt0) { is_occluded_pt1 = ((pt1->flag & GP_SPOINT_TEMP_TAG) != 0) ? ((pt1->flag & GP_SPOINT_TEMP_TAG2) != 0) : ```

Added subscriber: @antoniov

Added subscriber: @antoniov

@mano-wii It look a right fix because pt0 was used when NULL.

@mano-wii It look a right fix because `pt0` was used when NULL.
Germano Cavalcante changed title from Crash deleting GPencil when occlusion test is enabled to Crash erasing GPencil when occlusion test is enabled 2021-11-03 14:19:02 +01:00

This issue was referenced by 89adf516cd

This issue was referenced by 89adf516cd17c6345ef74efc0c52e53edae3d519

This issue was referenced by f81190f85f

This issue was referenced by f81190f85f65b292a0f0dfaa0a8d5b0f7fd72c58
Poster
Collaborator

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'
Germano Cavalcante self-assigned this 2021-11-03 14:23:18 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92760
There is no content yet.