Fix T92760: Crash erasing GPencil when occlusion test is enabled

`pt0` was read when `NULL` and `is_occluded_pt1` could be read even if
it is not initialized.